# lemin

./: CMakeLists.txt  Makefile  README.md
anthills/: 30  3000  bfs.map  complex.bug  debug.map  kaka.map  test_1  test_1 copy  test_2  test_3  test_4  test_5
includes/: lemin.h  libft.h
libft/: CMakeLists.txt  Makefile  count_occurences.c  ft_memcpy.c  ft_putchar_fd.c  ft_strcheck.c  ft_strdup.c  ft_strnew.c  ft_strreplace.c  get_next_line.c  is_directory.c
libft/includes/: get_next_line.h  lemin.h
srcs/: CMakeLists.txt  acquisition.c  bfs.c  error.c  main.c  parsing.c  parsing2.c  paths.c  solving.c
